# dontask

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CasioEmuMsvc.sln  GB2UTF8.ps1  PRIVACY.md  README.md  build-arch.sh  build-linux.sh  build.gradle  convert_all_lua_config.ps1  fix_review.py  gradle.properties  mingw-toolchain.cmake  patch_ios.py
1github/workflows/: Release.yml  build.yml  ios-build.yml  msbuild.yml
1jules/: bolt.md  sentinel.md
PythonPlugin/: Binary.h  ModelInfo.h  PluginApi.h  PythonPlugin.vcxproj  PythonPlugin.vcxproj.filters  dllmain.cpp  framework.h  packages.config
PythonPlugin/imgui/: imconfig.h  imgui.h  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
UnitTest1/: Binary.h  Chipset  Config.hpp  Containers  Emulator.cpp  Emulator.hpp  Ext  Gui  ModelInfo.h  Models.h  Peripheral  UnitTest1.cpp  UnitTest1.vcxproj  UnitTest1.vcxproj.filters  locales  packages.config  sdl_win32_extra.cpp  sdl_win32_extra.h  stringhelper.h
